# Light-Dip-Sensor

./: README.md  noworky.c
light_sampler/: CMakeLists.txt
light_sampler/hal/: adc_hal.c  adc_hal.h  pwm_hal_linux.c  pwm_hal_linux.h  rotary_hal.c  rotary_hal.h
light_sampler/src/: dip_detector.c  dip_detector.h  periodTimer.h  rotary_control.c  rotary_control.h  sampler.c  sampler.h  udp_server.c  udp_server.h
light_sampler/test/: light_sampler.c  test_adc.c  test_adc_all.c  test_final.c  test_led  test_led.c  test_potentiometer.c  test_rotary_debug.c  test_rotary_led.c  test_rotary_working.c  test_sampler.c  test_sampler_udp.c
